--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
                   <a class="H2" href="#3">Telefon Kontaktowy</a></li>
             </ul>
         </nav>
+        <meta property="og.ZDJ" content="ZDJ.shere.png">
         <img class="image js-image" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ5WYLjvfyFT8oaCl030EPmLSEF2bbiiLB7ASzalyOx&s" alt="Sebastian Romańczuk">
         <button class="js-Theme">Zmień tło :)</button>
         <section class="section" id="3">
