webside icon added

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="widtd=device-widtd, initial-scale=1.0">
     <title>Sebastian Romańczuk</title>
-    <link rel="icon" href="ZDJ/komputer.jpg">
+    <link rel="icon" href="ZDJ/komputer.jpg"
     <meta property="og:image" content="images/share.png">
     <link href="style.css" rel="stylesheet">
     <link href="css/container.css" rel="stylesheet">
