--- a/index.html
+++ b/index.html
@@ -17,6 +17,33 @@
         crossorigin="anonymous" referrerpolicy="no-referrer"/>
 </head>
 
+<form class="js-F">
+    <fieldset class="F_C_F">
+        <legend class="F_L">Kalkulator walut:</legend>
+<p>
+            <label>WYBIERZ WALUTE KTÓRA CIEBIE INTERESUJE:
+                <select class="js-WC" type="number">
+                    <option value="4.72">Euro(EUR)</option>
+                    <option value="4.85">Frank szwajcarski(CHF)</option>
+                </select>
+            </label>
+</p>
+<p>
+        <label>
+                PODAJ KWOTĘ W PLN
+                <input type="number" class="js-A" step="1" required><br>
+        </label>
+</p>
+<p>
+        <button >Oblicz Kwote</button>
+</p>
+<p>
+            PIENIĄDZE PO PRZELICZENIU NOMINAŁÓW:
+            <strong class="js-R"></strong>
+</p>
+    </fieldset>
+</form>
+
 <body>
     <div class="container">
         <section class="section">
@@ -98,6 +125,11 @@
                         <td class="table__cell">JAZDA NA PSIE</td>
                         <td class="table__cell">WĘDKOWAĆ</td>
                     </tr>
+                    <div class="flex">
+                    <div class="flex_item">Kocham Flexa po raz pierwszy</div>
+                    <div class="flex_item">Kocham Flexa po raz drógi</div>
+                    <div class="flex_item">Kocham Flexa po raz trzeci</div>
+                    </div>
                     </table>
             </section>
         </main>
